Prevent horizontal scroll when link text have too many consecutive non-whitespace characters

--- a/FSharpNews.Web.Frontend/Content/Site.css
+++ b/FSharpNews.Web.Frontend/Content/Site.css
@@ -57,6 +57,10 @@
     width: 16px;
 }
 
+#news tr td:nth-child(2) {
+    word-wrap: break-word;
+}
+
 #news tr td:last-child {
     text-align: right;
     white-space: nowrap;
